--- a/templates/blogpage.html
+++ b/templates/blogpage.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     
-<h2>{{blog.name}}</h2>
-    {{blog.content}}
-    {% endif %}
+<h2>{{kook}}</h2>
+    {{look}}
+    
 
     
 
