--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -9,10 +9,8 @@
 
         <ul>
             {% for blog in blogs %}
-            <li>{{blog.name}}<br>{{blog.content}}
-                <form method="POST" action="/" style="display:inline-block;">
-                    <input type="hidden" name="task-id" value="{{blog.name}}" />
-                </form>
+            <li><a href="/?id={{blog.id}}">{{blog.name}}</a><br>{{blog.content}}
+                
                 
             </li>
             {% endfor %}
