--- a/templates/addblogs.html
+++ b/templates/addblogs.html
@@ -7,7 +7,7 @@
     }
 </style>
     <h1>Write a Blog!</h1>
-    <form  method='post'  >
+    <form  method='post' action='/newpost'>
         <label>
             New Blog Title:
         
