--- a/templates/blogpage.html
+++ b/templates/blogpage.html
@@ -2,10 +2,7 @@
 
 {% block content %}
     
-<h2>{{kook}}</h2>
-    {{look}}
-    
-
-    
+<h2>{{blog.name}}</h2>
+    {{blog.content}}
 
 {% endblock %}
