--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -9,7 +9,7 @@
 
         <ul>
             {% for blog in blogs %}
-            <li><a href="/?id={{blog.id}}">{{blog.name}}</a><br>{{blog.content}}
+            <li><a href="/blog?id={{blog.id}}">{{blog.name}}</a><br>{{blog.content}}
                 
                 
             </li>
