--- a/templates/home.html
+++ b/templates/home.html
@@ -10,8 +10,8 @@
 
     <ul>
         {% for blog in blogs %}
-        <li><a href="/?id={{blog.id}}">{{blog.name}}</a><br>{{blog.content}}
-                        
+        <li><a href="/blog?id={{blog.id}}">{{blog.name}}</a><br>{{blog.content}}
+                        <FORM action='Post'></FORM>/>
         </li>
         {% endfor %}
     </ul>
