--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <nav>
         <a href="/blog">Posted Blogs</a>
         <a href="/newpost">Add a Blog</a>
+        <a href="/logout">Logout</a>
+        <a href="/signup">Create Account</a>
         
       </nav>
     {% block content %}
