--- a/templates/addblogs.html
+++ b/templates/addblogs.html
@@ -28,10 +28,10 @@
 
         <ul>
             {% for blog in blogs %}
-            <li> <a href="/{{blog.id}}">{{blog.name}}</a>
+            <li> <a href="/blog?id={{blog.id}}">{{blog.name}}</a>
                
             </nav><br>{{blog.content}}
-                <form method="POST" action="/{{blog.id}}" style="display:inline-block;">
+                <form method="POST"  style="display:inline-block;">
                     <input type="hidden" name="task-id" value="{{blog.name,blog.content}}" />
                 </form>
             </li>
