--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
         }
     </style>
     <h1>Signin</h1>
-    <form action="/newpost" method="post">
+    <form action="/login" method="post">
         <label for="username">Username</label>
         <input id="username" type="text" name="username" value='{{home}}' />
         <span class="error"> {{usererror}} </span>
