--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,9 @@
 
     <ul>
         {% for user in users %}
-        <li>{{user.username}}
+        <li><a href="/blog?userid={{user.id}}">{{user.username}}</a>
+           
+        </nav>
         </li>
         {% endfor %}
     </ul>
