--- a/templates/blogpage.html
+++ b/templates/blogpage.html
@@ -6,9 +6,12 @@
     {{kook}}
 
 
-<h5>Written by:<a href="/user">{{maam}}</a>
-           
-</nav></h5>
+<h5>Written by:<a href="/blog?userid={{maam}}">{{maam}}</a>
+</nav>
+<form method="POST"  style="display:inline-block;">
+    <input type="hidden"  />
+</form>
+</h5>
 
 
 {% endblock %}
