--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
     <ul>
         {% for user in users %}
-        <li><a href="/blog?userid={{user.id}}">{{user.username}}</a>
+        <li><a href="/blog?userid={{user.username}}">{{user.username}}</a>
            
         </nav>
         </li>
