--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
         <a href="/newpost">Add a Blog</a>
         <a href="/logout">Logout</a>
         <a href="/signup">Create Account</a>
+        <a href="/">Home</a>
+        <a href="/blog">Blogs</a>
         
       </nav>
     {% block content %}
