--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 
     <ul>
         {% for blog in blogs %}
-        <li><a href="/blog?id={{blog.id}}">{{blog.name}}</a><br>{{blog.content}}<br><h5>Written by:<a href="/blog?userid={{maam}}">{{maam}}</a>
+        <li><a href="/blog?id={{blog.id}}">{{blog.name}}</a><br>{{blog.content}}<br><h5>Written by:<a href="/blog?userid={{blog.user.username}}">{{blog.user.username}}</a>
 
                         
         </li>
